fix overlapping between share post button and nav bar

--- a/api/static/styles/header.css
+++ b/api/static/styles/header.css
@@ -87,6 +87,7 @@ body {
     padding-bottom: 20px;
     -webkit-transition: all 0.4s ease;
     transition: all 0.4s ease;
+    z-index: 100;
 }
 
 
